--- a/home-style.css
+++ b/home-style.css
@@ -3,42 +3,47 @@
 body{
     font-family: 'Montserrat', sans-serif;
     background-color: #FFFF;
-    
+    padding: 98px 26px 0px 26px;
 }
 
-.heading{
-    padding: 40px 24px 0px 24px;
-}
 h1{
-    padding-top: 98px;
     font-weight: 600;
     font-size: 22px;
     color: #464646;
 }
 h2{
-    padding-top: 3px;
     font-weight: 400;
     font-size: 18px;
     color: #464646;
 }
-
-
-.searchbar{
-    position: relative;
-    padding: 12px 24px;
+.text-size{
+    font-size: 11px;
+    font-weight: 400;
+}
+.button-position{
+    width: 50%;
 }
 
-.searchbar .fa-search{
-    position: absolute;
-    top: 36px;
-    left: 16px;
-}
 
-.searchbar button{
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    height: 50px;
-    width: 110px;
-    background: blue;
+.img-searchbar{
+    width: 100%;
+    height: 100%;
+}
+.img-banner{
+    width: 100%;
+    height: 100%; 
+}
+.button-size{
+    width: 56px;
+    height: 56px;
+}
+.shadow{
+    box-shadow: 2px 4px 11px rgba(70, 70, 70, 0.25);
+    border-radius: 15px;
+}
+.navigationbar{
+    bottom: 0%;
+    position: fixed;
+    left: 0;
+    box-shadow: 0px 0px 1px rgba(20, 20, 20, 0.04), 0px 0px 8px rgba(20, 20, 20, 0.08);
 }
