--- a/home-style.css
+++ b/home-style.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,600;1,100&display=swap');
 
+html{
+    margin: 26px 26px 26px 26px;
+
+}
 body{
     font-family: 'Montserrat', sans-serif;
     background-color: #FFFF;
-    padding: 98px 26px 0px 26px;
+    /* padding: 26px 26px 0px 26px; */
 }
-
 h1{
     font-weight: 600;
     font-size: 22px;
@@ -22,6 +25,9 @@ h2{
 }
 .button-position{
     width: 50%;
+}
+.heading{
+    padding-top:40px;
 }
 
 
@@ -46,4 +52,16 @@ h2{
     position: fixed;
     left: 0;
     box-shadow: 0px 0px 1px rgba(20, 20, 20, 0.04), 0px 0px 8px rgba(20, 20, 20, 0.08);
+}
+.swal2-cancel {
+    margin-right: 10px;
+  }
+
+.tombol-chocolate-navigationMenu{
+    width: 20px;
+    height: 20px;
+}
+.tombol-notification-navigationMenu{
+    width: 38px;
+    height: 38px;
 }
