--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,600;1,100&display=swap');
+
+body{
+    font-family: 'Montserrat', sans-serif;
+    background-color: #FFFF;
+    padding: 26px 26px 0px 26px;
+}
+
+.content{
+    padding-top: 34px;
+}
+
+.content-2{
+    padding-top: 12px;
+}
+.tombol{
+    padding-top: 34px;
+}
 .kirimkan{
     background-color: #0BCEC2;
     width: 100%;
     margin: 10px 0px;
 }
 .tombol-back {
-    width: 30px;
-    height: 35px;
-    padding-bottom: 10px;
+    width: 20px;
+    height: 20px;
+}
+.tombol-tambah-laporan{
+    padding: 0px 0px 6px;
 }
