--- a/loading-style.css
+++ b/loading-style.css
@@ -1,5 +1,5 @@
 .img-loading-screen{
-    background-image: url('./IMG/Loading\ screen\ \(opsi\ 1\)\ \(1\).png');
+    background-image: url('./IMG/Loading\ screen\ \(opsi\ 2\).png');
     background-repeat: no-repeat;
     background-position: absolute;
     background-size: 100%;
