--- a/ebook-style.css
+++ b/ebook-style.css
@@ -49,9 +49,9 @@ h2{
     border-radius: 15px;
 }
 
-.tombol-tambahEbook{
-    width: 142px;
-    height: 38px;
+.tombol-bagikankisah{
+    width: 176px;
+    height: 43px;
 }
 .tombol-back {
     width: 20px;
